--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ VUE_APP_USER_KEY=admin.user
 VUE_APP_SETTING_KEY=admin.setting
 VUE_APP_TBAS_KEY=admin.tabs
 VUE_APP_TBAS_TITLES_KEY=admin.tabs.titles
-VUE_APP_API_BASE_URL=http://devihmg.mocaptech.com:8081
+VUE_APP_API_BASE_URL=https://association.mocaptech.com/bss-admin
+VUE_APP_API_BASE_URL1=http://devihmg.mocaptech.com:8081
 VUE_APP_PUBLIC_PATH='./'
