--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ VUE_APP_TBAS_KEY=admin.tabs
 VUE_APP_TBAS_TITLES_KEY=admin.tabs.titles
 VUE_APP_API_BASE_URL=https://association.mocaptech.com/bss-admin
 VUE_APP_API_BASE_URL1=http://devihmg.mocaptech.com:8081
+VUE_APP_API_WECHAT_BASE_URL=https://wxapplet.association.mocaptech.com
 VUE_APP_PUBLIC_PATH='./'
