--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VUE_APP_API_BASE_URL=http://devihmg.mocaptech.com:8081
+VUE_APP_API_BASE_URL=http://devihmg.mocaptech.com:8081/bss-admin
 VUE_APP_API_WECHAT_BASE_URL=http://devihmg.mocaptech.com:8090
