--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,1 @@
-VUE_APP_API_BASE_URL=http://devihmg.mocaptech.com:8081
-VUE_APP_API_WECHAT_BASE_URL=http://devihmg.mocaptech.com:8090
+VUE_APP_API_BASE_URL=https://association.mocaptech.com/bss-admin
